--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
@@ -11,16 +10,32 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.My_aplication">
+
+        <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Tambah Catatan Activity -->
+        <activity
+            android:name=".TambahCatatanActivity"
+            android:exported="false" />
+
+        <!-- Tambah Tugas Activity -->
+        <activity
+            android:name=".TambahTugasActivity"
+            android:exported="false" />
+
+        <!-- Catatan Activity (untuk isi deskripsi) -->
+        <activity
+            android:name=".CatatanActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
